--- a/human heart data and optimization/Optimization_cMyBPC_phosphostates.ipynb
+++ b/human heart data and optimization/Optimization_cMyBPC_phosphostates.ipynb
@@ -22,7 +22,6 @@
    "cell_type": "markdown",
    "id": "53f93f8c-28da-40df-a519-37033dc7fd25",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -31,17 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8a5a5f6a-a8ee-4e5e-aa0b-8149546b298c",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\anaconda3\\envs\\basico\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: QtAgg\n",
+      "Using matplotlib backend: <object object at 0x0000021F40D4DFF0>\n",
       "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4ee72c10-1ca6-4d26-91ed-4cef5ef152e8",
    "metadata": {},
    "outputs": [],
@@ -185,7 +192,6 @@
    "cell_type": "markdown",
    "id": "830c007b-543c-4685-ae0e-dc3572249b49",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -194,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "50286ee7-098e-4ff5-8bd5-9c4a3e85db14",
    "metadata": {},
    "outputs": [],
@@ -209,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d615eb47-7b4c-4f11-bb40-41c1d0db567a",
    "metadata": {},
    "outputs": [
@@ -229,7 +235,6 @@
    "cell_type": "markdown",
    "id": "6eaf6446-f475-49c8-a06c-d4f326e7b9b9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -238,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "76354160-69f5-4188-adbd-9d5a6575dee3",
    "metadata": {},
    "outputs": [
@@ -246,7 +251,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 12%|█▎        | 1/8 [07:13<50:32, 433.24s/it]\n"
+      "  0%|          | 0/8 [00:33<?, ?it/s]\n"
      ]
     },
     {
@@ -256,8 +261,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m         startValEnzymes \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1e-9\u001b[39m,\u001b[38;5;241m1e-9\u001b[39m,\u001b[38;5;241m1e-9\u001b[39m,\u001b[38;5;241m1e-9\u001b[39m]  \u001b[38;5;66;03m#pka_start, rsk2_start, pkc_start, pp1_start \u001b[39;00m\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;66;03m#runOptimization(paramset,pNames,emax,emin,estart,PPtot, n_s, check=False):\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m         optResult\u001b[38;5;241m.\u001b[39mappend(\u001b[43mrunOptimization\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparamset\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43mnparamsets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mparamNames\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmaxValEnzymes\u001b[49m\u001b[43m,\u001b[49m\u001b[43mminValEnzymes\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstartValEnzymes\u001b[49m\u001b[43m,\u001b[49m\u001b[43mii\u001b[49m\u001b[43m,\u001b[49m\u001b[43mreps\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# optResult dimensions are PKA_max, PPase_tot, Phosphostate, Nr Paramsets, Repetition, Solution vector [optVal,PKA,PKC,RSK2,PP1,PPtot]    \u001b[39;00m\n\u001b[0;32m     20\u001b[0m \n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# pick best of reps\u001b[39;00m\n\u001b[0;32m     22\u001b[0m dims \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mlen\u001b[39m(vPKA),\u001b[38;5;28mlen\u001b[39m(vPPase),\u001b[38;5;241m8\u001b[39m,nparamsets,reps,\u001b[38;5;241m6\u001b[39m)\n",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mrunOptimization\u001b[1;34m(paramset, pNames, emax, emin, estart, PPtot, n_s, check)\u001b[0m\n\u001b[0;32m     45\u001b[0m     set_parameters(name\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mk32\u001b[39m\u001b[38;5;124m'\u001b[39m, initial_value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.8\u001b[39m, value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.8\u001b[39m)\n\u001b[0;32m     46\u001b[0m     set_parameters(name\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mK31\u001b[39m\u001b[38;5;124m'\u001b[39m, initial_value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.3e-6\u001b[39m, value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.3e-6\u001b[39m)\n\u001b[1;32m---> 47\u001b[0m     \u001b[43mset_parameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mK32\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_value\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.3e-6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.3e-6\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ii \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_s):\n\u001b[0;32m     50\u001b[0m     result \u001b[38;5;241m=\u001b[39m run_optimization()\n",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m         startValEnzymes \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1e-9\u001b[39m,\u001b[38;5;241m1e-9\u001b[39m,\u001b[38;5;241m1e-9\u001b[39m,\u001b[38;5;241m1e-9\u001b[39m]  \u001b[38;5;66;03m#pka_start, rsk2_start, pkc_start, pp1_start \u001b[39;00m\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;66;03m#runOptimization(paramset,pNames,emax,emin,estart,PPtot, n_s, check=False):\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m         optResult\u001b[38;5;241m.\u001b[39mappend(\u001b[43mrunOptimization\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparamset\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43mnparamsets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mparamNames\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmaxValEnzymes\u001b[49m\u001b[43m,\u001b[49m\u001b[43mminValEnzymes\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstartValEnzymes\u001b[49m\u001b[43m,\u001b[49m\u001b[43mii\u001b[49m\u001b[43m,\u001b[49m\u001b[43mreps\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# optResult dimensions are PKA_max, PPase_tot, Phosphostate, Nr Paramsets, Repetition, Solution vector [optVal,PKA,PKC,RSK2,PP1,PPtot]    \u001b[39;00m\n\u001b[0;32m     20\u001b[0m \n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# pick best of reps\u001b[39;00m\n\u001b[0;32m     22\u001b[0m dims \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mlen\u001b[39m(vPKA),\u001b[38;5;28mlen\u001b[39m(vPPase),\u001b[38;5;241m8\u001b[39m,nparamsets,reps,\u001b[38;5;241m6\u001b[39m)\n",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36mrunOptimization\u001b[1;34m(paramset, pNames, emax, emin, estart, PPtot, n_s, check)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m#set RSK2 params (same for all paramsets)\u001b[39;00m\n\u001b[0;32m     44\u001b[0m set_parameters(name\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mk31\u001b[39m\u001b[38;5;124m'\u001b[39m, initial_value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.8\u001b[39m, value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.8\u001b[39m)\n\u001b[1;32m---> 45\u001b[0m \u001b[43mset_parameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mk32\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_value\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.8\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     46\u001b[0m set_parameters(name\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mK31\u001b[39m\u001b[38;5;124m'\u001b[39m, initial_value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.3e-6\u001b[39m, value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.3e-6\u001b[39m)\n\u001b[0;32m     47\u001b[0m set_parameters(name\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mK32\u001b[39m\u001b[38;5;124m'\u001b[39m, initial_value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.3e-6\u001b[39m, value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.3e-6\u001b[39m)\n",
       "File \u001b[1;32mF:\\anaconda3\\envs\\basico\\lib\\site-packages\\basico\\model_info.py:2669\u001b[0m, in \u001b[0;36mset_parameters\u001b[1;34m(name, exact, **kwargs)\u001b[0m\n\u001b[0;32m   2666\u001b[0m         param\u001b[38;5;241m.\u001b[39msetSBMLId(kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msbml_id\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m   2668\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m change_set\u001b[38;5;241m.\u001b[39msize():\n\u001b[1;32m-> 2669\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdateInitialValues\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchange_set\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2671\u001b[0m model\u001b[38;5;241m.\u001b[39mcompileIfNecessary()\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
